hide for mobile

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </nav>
         <!-- Mobile menu, show/hide based on menu open state. -->
         <div role="dialog" aria-modal="true">
-          <div focus="true" class="fixed inset-0 z-10 overflow-y-auto bg-white px-6 py-6 lg:hidden">
+          <div focus="true" class="hidden fixed inset-0 z-10 overflow-y-auto bg-white px-6 py-6 lg:hidden">
             <div class="flex h-9 items-center justify-between">
               <div class="flex">
                 <a href="#" class="-m-1.5 p-1.5">
