--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       </div>
       <div style="clear: both;"></div>
       <div class="relative overflow-hidden bg-white">
+        <a name="company"></a>
         <div class="pt-16 pb-80 sm:pt-24 sm:pb-40 lg:pt-40 lg:pb-48">
           <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
             <div class="sm:max-w-lg">
@@ -187,9 +188,9 @@
             The other one is Weihai Ding Sheng Intelligent Technology Co., Ltd, which specifies in the field of industrial products , outdoor exercise products, fishing gear and injection mold products. Apart from the above services, Intelligent Tech is able to assemble, sale, import and export., etc. 
           </p>
         </div>
-    </div>
-      <!-- <a name="products"/> -->
+      </div>
       <div class="bg-white">
+        <a name="products"></a>
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Products</h2>
           <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Products</h2>
@@ -320,6 +321,7 @@
       </div>
 
       <div class="bg-gray-100">
+        <a name="equipments"></a>
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
             <h2 class="text-2xl font-bold text-gray-900">Equipments</h2>
@@ -473,6 +475,7 @@
       </div>
 
       <div class="bg-gray-100">
+        <a name="contact"></a>
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <div class="grid grid-cols-2 gap-x-4">
             <div class="group relative text-sm">
