hide pictures to speed up

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- This example requires Tailwind CSS v3.0+ -->
   <div class="isolate bg-white">
-    <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]">
+    <!-- <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]">
       <svg
         class="relative left-[calc(50%-11rem)] -z-10 h-[21.1875rem] max-w-none -translate-x-1/2 rotate-[30deg] sm:left-[calc(50%-30rem)] sm:h-[42.375rem]"
         viewBox="0 0 1155 678" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -25,7 +25,7 @@
           </linearGradient>
         </defs>
       </svg>
-    </div>
+    </div> -->
     <div class="px-6 pt-6 lg:px-8">
       <div>
         <nav class="flex h-9 items-center justify-between" aria-label="Global">
@@ -123,7 +123,7 @@
                 </a>
               </div> -->
             </div>
-            <div
+            <!-- <div
               class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]">
               <svg
                 class="relative left-[calc(50%+3rem)] h-[21.1875rem] max-w-none -translate-x-1/2 sm:left-[calc(50%+36rem)] sm:h-[42.375rem]"
@@ -138,7 +138,7 @@
                   </linearGradient>
                 </defs>
               </svg>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
