rename equipment names

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <!-- Desk and Office -->
                   </a>
                 </h3>
-                <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p>
+                <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
@@ -351,7 +351,7 @@
                     <!-- Self-Improvement -->
                   </a>
                 </h3>
-                <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p>
+                <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
@@ -365,7 +365,7 @@
                     <!-- Travel -->
                   </a>
                 </h3>
-                <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p>
+                <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
             </div>
 
@@ -381,7 +381,7 @@
                     <!-- Desk and Office -->
                   </a>
                 </h3>
-                <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p>
+                <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
@@ -395,7 +395,7 @@
                     <!-- Self-Improvement -->
                   </a>
                 </h3>
-                <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p>
+                <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
@@ -409,7 +409,7 @@
                     <!-- Travel -->
                   </a>
                 </h3>
-                <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p>
+                <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
             </div>
           </div>
