--- a/index.html
+++ b/index.html
@@ -413,6 +413,104 @@
               </div>
             </div>
           </div>
+          <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
+            <table class="table-auto border-collapse border border-slate-500" width="100%">
+              <tbody align="center">
+              <tr>
+                <th class="border border-slate-600">Equipment</th>
+                <th class="border border-slate-600">Brand</th>
+                <th class="border border-slate-600">Model</th>
+                <th class="border border-slate-600">Quantity</th>
+                <th class="border border-slate-600">Note</th>
+              </tr><tr>
+                <td rowspan="4" class="border border-slate-600">CNC Drilling Machine</td>
+                <td>Brother</td>
+                <td>S500Z2N</td>
+                <td>3</td>
+                <td rowspan="6" class="border border-slate-600">CNC Machine</td>
+              </tr><tr>
+                <td>Brother</td>
+                <td>S700Z2N</td>
+                <td>1</td>
+              </tr><tr>
+                <td>JiaTie</td>
+                <td>540</td>
+                <td>3</td>
+              </tr><tr>
+                <td class="border-b border-slate-600">TaiQunJingJi</td>
+                <td class="border-b border-slate-600">540</td>
+                <td class="border-b border-slate-600">6</td>
+              </tr><tr>
+                <td rowspan="2" class="border border-slate-600">CNC Machine</td>
+                <td>QiaoFeng</td>
+                <td>V11</td>
+                <td>2</td>
+              </tr><tr>
+                <td class="border-b border-slate-600">QiaoFeng</td>
+                <td class="border-b border-slate-600">V8</td>
+                <td class="border-b border-slate-600">1</td>
+              </tr><tr>
+                <td rowspan="2" class="border border-slate-600">WEDM Machine</td>
+                <td>SODICK</td>
+                <td>SL400G</td>
+                <td>2</td>
+                <td rowspan="3" class="border border-slate-600">EDM Machine</td>
+              </tr><tr>
+                <td>QingHong</td>
+                <td>540</td>
+                <td>2</td>
+              </tr><tr>
+                <td class="border border-slate-600">EDM Machine</td>
+                <td class="border-b border-slate-600">MAKINO</td>
+                <td class="border-b border-slate-600">EDNC85</td>
+                <td class="border-b border-slate-600">3</td>
+              </tr><tr>
+                <td class="border border-slate-600">Lathe</td>
+                <td>ShenYangJiChuang</td>
+                <td>CW6163</td>
+                <td>1</td>
+                <td rowspan="3" class="border border-slate-600">Machine</td>
+              </tr><tr>
+                <td class="border border-slate-600">Milling Machine</td>
+                <td>XuZheng</td>
+                <td>4#</td>
+                <td>4</td>
+              </tr><tr>
+                <td class="border border-slate-600">Grinding Machine</td>
+                <td class="border-b border-slate-600">Hangzhou Grinder Machine</td>
+                <td class="border-b border-slate-600">1030</td>
+                <td class="border-b border-slate-600">4</td>
+              </tr><tr>
+                <td class="border border-slate-600">2D Projector Equipment</td>
+                <td>Taiwan WanHao</td>
+                <td>VTM-1510G</td>
+                <td>2</td>
+                <td rowspan="4" class="border border-slate-600">Measurement Equipment</td>
+              </tr><tr>
+                <td class="border border-slate-600">Digital Height Gauge</td>
+                <td>Switzerland</td>
+                <td>LH-600H</td>
+                <td>1</td>
+              </tr><tr>
+                <td class="border border-slate-600">Digital Height Gauge</td>
+                <td>Mitutoyo</td>
+                <td>0-50</td>
+                <td>1</td>
+              </tr><tr>
+                <td class="border border-slate-600">Coordinate Measuring Machine</td>
+                <td class="border-b border-slate-600">Hexagon</td>
+                <td class="border-b border-slate-600">Classic0.6.08.06</td>
+                <td class="border-b border-slate-600">1</td>
+              </tr><tr>
+                <td class="border border-slate-600">Injection Molding Machine</td>
+                <td>Engel</td>
+                <td>80T-350T</td>
+                <td>13</td>
+                <td class="border border-slate-600">Injection Molding Machine</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
 
