add quiality assurance

--- a/index.html
+++ b/index.html
@@ -514,12 +514,9 @@
         </div>
       </div>
 
-      <div>
-        <!-- <a name="products" class=""/> -->
-      </div>
       <div class="bg-white">
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-          <h2 class="sr-only">Products</h2>
+          <h2 class="sr-only">Customers</h2>
           <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Customers</h2>
           <br />
           <div
@@ -572,6 +569,30 @@
       </div>
 
       <div class="bg-gray-100">
+        <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
+          <h2 class="sr-only">Quality Assurance</h2>
+          <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Quality Assurance</h2>
+          <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
+            <p class="mt-4 text-xl text-gray-500">
+              Quality is the strong guarantee for the development of the company, obviously, production processing is the key to product quality, inspection is the guarantee for the products. WHDS has been strictly followed SOP for production process. Our stable and qualified products have earned our customers' trust for years.
+            </p>
+            <p class="mt-4 text-xl text-gray-500">
+              To make sure the products conform to our customers' requirements, from raw material to shipment, every step of the manufacturing process is under control. All products will be under 3 checks in the whole process:
+            </p>
+            <ul class="mt-4 text-xl text-gray-500 list-disc">
+              <li>
+                Raw material inspection: check the raw material before accepting and storing.
+              </li><li>
+                In-line inspection: technicians do self-check for every parts and QC spot check during production.
+              </li><li>
+                Final inspection: QC 100% inspect the finished product before shipping and choose the best packaging way to avoid damages during transportation.
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white">
         <a name="contact"></a>
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <div class="grid grid-cols-2 gap-x-4">
@@ -612,7 +633,7 @@
         </div>
       </div>
 
-      <div class="bg-white">
+      <div class="bg-gray-100">
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 text-gray-500">
           Copyrights&copy;2016-2023 Weihai Ding Sheng SanHe Precision Machinery Co., Ltd. | Weihai Ding Sheng SanHe Precision Machinery Co., Ltd.
         </div>
