--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div>
         <nav class="flex h-9 items-center justify-between" aria-label="Global">
           <div class="flex lg:min-w-0 lg:flex-1" aria-label="Global">
-            <a href="#" class="-m-1.5 p-1.5">
+            <a href="/" class="-m-1.5 p-1.5">
               <span class="sr-only">WeiHai DingSheng</span>
               <img class="h-8" src="img/logo.png" alt="logo">
             </a>
@@ -110,18 +110,18 @@
               <p class="mt-6 text-lg leading-8 text-gray-600 sm:text-center">
                 Focuses on the field of automation, CNC machining, injection mold manufacturing and assembling products, providing one-stop solution in industrial field. 
               </p>
-              <!-- <div class="mt-8 flex gap-x-4 sm:justify-center">
-                <a href="#"
+              <div class="mt-8 flex gap-x-4 sm:justify-center">
+                <a href="#contact"
                   class="inline-block rounded-lg bg-indigo-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-indigo-600 hover:bg-indigo-700 hover:ring-indigo-700">
-                  Get started
+                  Contact us
                   <span class="text-indigo-200" aria-hidden="true">&rarr;</span>
                 </a>
-                <a href="#"
+                <!-- <a href="#"
                   class="inline-block rounded-lg px-4 py-1.5 text-base font-semibold leading-7 text-gray-900 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
                   Live demo
                   <span class="text-gray-400" aria-hidden="true">&rarr;</span>
-                </a>
-              </div> -->
+                </a> -->
+              </div>
             </div>
             <!-- <div
               class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]">
