--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               <div class="group relative">
                 <div
                   class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
-                  <img src="img/products/6.jpg" alt="" class="h-full w-full object-cover object-center">
+                  <img src="img/equipments/6.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
                 <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
