production to product

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="mx-auto max-w-3xl pt-20 pb-32 sm:pt-48 sm:pb-40">
           <div>
             <div>
-              <h1 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Complete Automation Production Solutions</h1>
+              <h1 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Complete Automation Product Solutions</h1>
               <p class="mt-6 text-lg leading-8 text-gray-600 sm:text-center">
                 Focuses on the field of automation, CNC machining, injection mold manufacturing and assembling products, providing one-stop solution in industrial field. 
               </p>
