--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
       <div class="relative overflow-hidden bg-white">
         <!-- <a href='#' name="company" class="group"/> -->
       </div>
-      <div style="clear: both;"></div>
       <div class="relative overflow-hidden bg-white">
         <a name="company"></a>
         <div class="pt-16 pb-80 sm:pt-24 sm:pb-40 lg:pt-40 lg:pb-48">
@@ -193,128 +192,126 @@
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Products</h2>
           <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Products</h2>
-          <br style="clear:both"/>
           <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-9 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/a.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Automatic Screw Machine</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/2.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/3.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Cartridge Assembly Equipment</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/4.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Plastic Sticker Assembly Fixture</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/5.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Torque Sensor Test Equipment</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-9 w-full xoverflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/6.jpg" alt=""
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+                  class="w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Heavy Industrial Polish Equipment</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/11.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Products</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/12.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Aluminum Products</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/13.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Plastic Part</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/14.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/15.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Outdoor Exercise Products </h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div
-                class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
                 <img src="img/products/16.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Prototype </h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
           </div>
         </div>
       </div>
@@ -323,48 +320,48 @@
         <a name="equipments"></a>
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
-            <h2 class="text-2xl font-bold text-gray-900">Equipments</h2>
-
+            <h2 class="sr-only">Equipments</h2>
+            <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Equipments</h2>
             <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
               <div class="group relative">
                 <div
-                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
+                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
                   <img src="img/equipments/1.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
-                <h3 class="mt-6 text-sm text-gray-500">
+                <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    <!-- Desk and Office -->
+                    Desk and Office
                   </a>
-                </h3>
+                </h3> -->
                 <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
                 <div
-                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
+                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
                   <img src="img/equipments/2.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
-                <h3 class="mt-6 text-sm text-gray-500">
+                <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    <!-- Self-Improvement -->
+                    Self-Improvement
                   </a>
-                </h3>
+                </h3> -->
                 <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
                 <div
-                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
+                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
                   <img src="img/equipments/3.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
-                <h3 class="mt-6 text-sm text-gray-500">
+                <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    <!-- Travel -->
+                    Travel
                   </a>
-                </h3>
+                </h3> -->
                 <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
             </div>
@@ -372,43 +369,43 @@
             <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
               <div class="group relative">
                 <div
-                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
+                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
                   <img src="img/equipments/4.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
-                <h3 class="mt-6 text-sm text-gray-500">
+                <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    <!-- Desk and Office -->
+                    Desk and Office
                   </a>
-                </h3>
+                </h3> -->
                 <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
                 <div
-                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
+                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
                   <img src="img/equipments/5.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
-                <h3 class="mt-6 text-sm text-gray-500">
+                <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    <!-- Self-Improvement -->
+                    Self-Improvement
                   </a>
-                </h3>
+                </h3> -->
                 <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
 
               <div class="group relative">
                 <div
-                  class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-2 sm:aspect-h-1 sm:h-64 lg:aspect-w-1 lg:aspect-h-1">
+                  class="relative h-80 w-full h-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
                   <img src="img/equipments/6.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
-                <h3 class="mt-6 text-sm text-gray-500">
+                <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    <!-- Travel -->
+                    Travel
                   </a>
-                </h3>
+                </h3> -->
                 <!-- <p class="text-base font-semibold text-gray-900">CNC Drilling Machine</p> -->
               </div>
             </div>
