--- a/index.html
+++ b/index.html
@@ -187,11 +187,12 @@
           </p>
         </div>
       </div>
+
       <div class="bg-white">
         <a name="products"></a>
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Products</h2>
-          <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Products</h2>
+          <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl pb-8">Products</h2>
           <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
             <div class="group">
               <div
@@ -321,7 +322,7 @@
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
             <h2 class="sr-only">Equipments</h2>
-            <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Equipments</h2>
+            <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl pb-8">Equipments</h2>
             <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
               <div class="group relative">
                 <div
@@ -512,6 +513,66 @@
       </div>
 
       <div class="bg-white">
+        <a name="photoes"></a>
+        <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
+          <h2 class="sr-only">Photo Gallery</h2>
+          <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl pb-8">Photo Gallery</h2>
+          <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/2.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/3.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Cartridge Assembly Equipment</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/4.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Plastic Sticker Assembly Fixture</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/7.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Precision Products</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/10.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white">
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Customers</h2>
           <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Customers</h2>
@@ -568,7 +629,7 @@
       <div class="bg-gray-100">
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Quality Assurance</h2>
-          <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Quality Assurance</h2>
+          <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl pb-8">Quality Assurance</h2>
           <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
             <p class="mt-4 text-xl text-gray-500">
               Quality is the strong guarantee for the development of the company, obviously, production processing is the key to product quality, inspection is the guarantee for the products. WHDS has been strictly followed SOP for production process. Our stable and qualified products have earned our customers' trust for years.
