--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-9 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/a.jpg" alt=""
+                <img src="img/products/a.jpg" alt="Automatic Screw Machine"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Automatic Screw Machine</h3>
@@ -207,7 +207,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/2.jpg" alt=""
+                <img src="img/products/2.jpg" alt="Visual Inspection Equipment"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3>
@@ -217,7 +217,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/3.jpg" alt=""
+                <img src="img/products/3.jpg" alt="Cartridge Assembly Equipment"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Cartridge Assembly Equipment</h3>
@@ -227,7 +227,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/4.jpg" alt=""
+                <img src="img/products/4.jpg" alt="Plastic Sticker Assembly Fixture"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Plastic Sticker Assembly Fixture</h3>
@@ -237,7 +237,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/5.jpg" alt=""
+                <img src="img/products/5.jpg" alt="Torque Sensor Test Equipment"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Torque Sensor Test Equipment</h3>
@@ -247,7 +247,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-9 w-full xoverflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/6.jpg" alt=""
+                <img src="img/products/6.jpg" alt="Heavy Industrial Polish Equipment"
                   class="w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Heavy Industrial Polish Equipment</h3>
@@ -257,7 +257,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/11.jpg" alt=""
+                <img src="img/products/11.jpg" alt="Precision Products"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Products</h3>
@@ -267,7 +267,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/12.jpg" alt=""
+                <img src="img/products/12.jpg" alt="Precision Aluminum Products"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Aluminum Products</h3>
@@ -277,7 +277,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/13.jpg" alt=""
+                <img src="img/products/13.jpg" alt="Precision Plastic Part"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Plastic Part</h3>
@@ -287,7 +287,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/14.jpg" alt=""
+                <img src="img/products/14.jpg" alt="Part of Fixture"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3>
@@ -297,20 +297,20 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/15.jpg" alt=""
+                <img src="img/products/15.jpg" alt="Outdoor Exercise Products"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
-              <h3 class="mt-4 text-sm text-gray-700">Outdoor Exercise Products </h3>
+              <h3 class="mt-4 text-sm text-gray-700">Outdoor Exercise Products</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
             </div>
 
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/16.jpg" alt=""
+                <img src="img/products/16.jpg" alt="Prototype"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
-              <h3 class="mt-4 text-sm text-gray-700">Prototype </h3>
+              <h3 class="mt-4 text-sm text-gray-700">Prototype</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
             </div>
           </div>
