--- a/index.html
+++ b/index.html
@@ -143,12 +143,9 @@
         </div>
       </div>
 
-      <div class="relative overflow-hidden bg-white">
-        <!-- <a href='#' name="company" class="group"/> -->
-      </div>
-      <div class="relative overflow-hidden bg-white">
+      <div class="relative overflow-hidden bg-gray-100">
         <a name="company"></a>
-        <div class="pt-16 pb-80 sm:pt-24 sm:pb-40 lg:pt-40 lg:pb-48">
+        <div class="pt-10 pb-80 sm:pt-24 sm:pb-40 lg:pt-10 lg:pb-10">
           <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
             <div class="sm:max-w-lg">
               <h1 class="font text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Introduction</h1>
@@ -178,8 +175,8 @@
         </div>
       </div>
 
-      <div class="relative overflow-hidden bg-white">
-        <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
+      <div class="relative overflow-hidden bg-gray-100">
+        <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8 pb-10">
           <p class="mt-4 text-xl text-gray-500">
             One is Weihai Ding Sheng SanHe Precision Machinery Co., Ltd, which is proficient in designing electronic automation production line from designing manufacturing to manufacturing. The company is capable to provide the solution in terms of clients' requirement.
           </p><p class="mt-4 text-xl text-gray-500">
