--- a/index.html
+++ b/index.html
@@ -566,6 +566,15 @@
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
             </div>
 
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/11.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
           </div>
         </div>
       </div>
