tweak pic layout

--- a/index.html
+++ b/index.html
@@ -147,9 +147,11 @@
         <a name="company"></a>
         <div class="pt-10 pb-80 sm:pt-24 sm:pb-40 lg:pt-10 lg:pb-10">
           <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
-            <div class="sm:max-w-lg">
-              <h1 class="font text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Introduction</h1>
-              <p class="mt-4 text-xl text-gray-500">
+            <h1 class="font text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Introduction</h1>
+            <div class="float-right sm:max-w-lg max-w-lg">
+              <img src="img/company.jpg" alt="company" class="rounded-lg">
+            </div>
+            <p class="mt-4 text-xl text-gray-500">
                 Dingseng group was established in 2016 in Weihai city, which covers an area of ​​12000 square meters and currently has 105 employees, including 12 engineers and 30 professional technical staffs. 
               </p>
               <p class="mt-4 text-xl text-gray-500">
@@ -158,30 +160,12 @@
               <p class="mt-4 text-xl text-gray-500">
                 Ding Sheng is a group enterprise, which consists of two independent companies.
               </p>
+              <p class="mt-4 text-xl text-gray-500">
+                One is Weihai Ding Sheng SanHe Precision Machinery Co., Ltd, which is proficient in designing electronic automation production line from designing manufacturing to manufacturing. The company is capable to provide the solution in terms of clients' requirement.
+              </p><p class="mt-4 text-xl text-gray-500">
+                The other one is Weihai Ding Sheng Intelligent Technology Co., Ltd, which specifies in the field of industrial products , outdoor exercise products, fishing gear and injection mold products. Apart from the above services, Intelligent Tech is able to assemble, sale, import and export., etc.
+              </p>
             </div>
-            <div>
-              <div class="mt-9">
-                <!-- Decorative image grid -->
-                <div aria-hidden="true"
-                  class="pointer-events-none lg:absolute lg:inset-y-0 lg:mx-auto lg:w-full lg:max-w-7xl">
-                  <div
-                    class="absolute transform sm:left-1/2 sm:top-0 sm:translate-x-8 lg:left-1/2 lg:top-1/2 lg:-translate-y-1/2 lg:translate-x-8">
-                    <img src="img/company.jpg" alt="" class="h-full w-full object-cover object-center">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="relative overflow-hidden bg-gray-100">
-        <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8 pb-10">
-          <p class="mt-4 text-xl text-gray-500">
-            One is Weihai Ding Sheng SanHe Precision Machinery Co., Ltd, which is proficient in designing electronic automation production line from designing manufacturing to manufacturing. The company is capable to provide the solution in terms of clients' requirement.
-          </p><p class="mt-4 text-xl text-gray-500">
-            The other one is Weihai Ding Sheng Intelligent Technology Co., Ltd, which specifies in the field of industrial products , outdoor exercise products, fishing gear and injection mold products. Apart from the above services, Intelligent Tech is able to assemble, sale, import and export., etc. 
-          </p>
         </div>
       </div>
 
